# fastapi_zero

./: README.md  alembic.ini  pyproject.toml
fastapi_zero/: app.py  schemas.py
migrations/: env.py
migrations/versions/: 3a721bd78dff_adicinando_updated_at.py  76e3742de4d8_criando_tabela_de_users.py
tests/: test_app.py  test_db.py
